// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ASG selection modal component should add the selected ASG 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
    >
      <div
        class="StyledProps--font StyledProps--main"
        style="padding-bottom: 20px; border-bottom: 1px solid #CDD3DD;"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-large"
        >
          Select Auto scaling group
        </p>
      </div>
      <div
        class="Layout--horizontal StyledProps--main"
        style="padding-bottom: 20px; padding-top: 20px; border-bottom: 1px solid #CDD3DD; justify-content: space-between;"
      >
        <div
          class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center"
        >
          <button
            class="bp3-button bp3-disabled bp3-loading Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly"
            disabled=""
            style="background-color: rgb(2, 120, 213); margin-right: 20px; color: rgb(243, 243, 250);"
            tabindex="-1"
            type="button"
          >
            <div
              class="bp3-spinner bp3-button-spinner"
            >
              <div
                class="bp3-spinner-animation"
              >
                <svg
                  height="20"
                  stroke-width="16.00"
                  viewBox="-3.00 -3.00 106.00 106.00"
                  width="20"
                >
                  <path
                    class="bp3-spinner-track"
                    d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                  />
                  <path
                    class="bp3-spinner-head"
                    d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                    pathLength="280"
                    stroke-dasharray="280 280"
                    stroke-dashoffset="210"
                  />
                </svg>
              </div>
            </div>
            <span
              class="bp3-button-text"
            >
              Add selected
            </span>
          </button>
          <div>
            <span
              class="bp3-icon bp3-icon-refresh StyledProps--main StyledProps--color StyledProps--color-primary7"
              icon="refresh"
            >
              <svg
                data-icon="refresh"
                height="14"
                viewBox="0 0 16 16"
                width="14"
              >
                <desc>
                  refresh
                </desc>
                <path
                  d="M14.99 6.99c-.55 0-1 .45-1 1 0 3.31-2.69 6-6 6-1.77 0-3.36-.78-4.46-2h1.46c.55 0 1-.45 1-1s-.45-1-1-1h-4c-.55 0-1 .45-1 1v4c0 .55.45 1 1 1s1-.45 1-1v-1.74a7.95 7.95 0 006 2.74c4.42 0 8-3.58 8-8 0-.55-.45-1-1-1zm0-7c-.55 0-1 .45-1 1v1.74a7.95 7.95 0 00-6-2.74c-4.42 0-8 3.58-8 8 0 .55.45 1 1 1s1-.45 1-1c0-3.31 2.69-6 6-6 1.77 0 3.36.78 4.46 2h-1.46c-.55 0-1 .45-1 1s.45 1 1 1h4c.55 0 1-.45 1-1v-4c0-.55-.45-1-1-1z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              style="margin: 0px 5px; cursor: pointer;"
            >
              Refresh
            </span>
          </div>
        </div>
        <div
          class="bp3-input-group ui-search-box ExpandingSearchInput--main    ExpandingSearchInput--light"
          data-name=""
        >
          <span
            class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey700"
            data-icon="thinner-search"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 16 16"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </span>
          <input
            class="bp3-input  ExpandingSearchInput--filter"
            dir="auto"
            placeholder="Search"
            style="padding-right: 0px;"
            type="search"
            value=""
          />
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="table"
        >
          <div
            class="header"
            role="row"
          >
            <div
              class="cell"
              colspan="1"
              role="columnheader"
              style="width: 5%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                
              </p>
            </div>
            <div
              class="cell"
              colspan="1"
              role="columnheader"
              style="width: 70%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                ce.co.instanceSelector.name
              </p>
            </div>
            <div
              class="cell"
              colspan="1"
              role="columnheader"
              style="width: 10%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                Instances
              </p>
            </div>
            <div
              class="cell"
              colspan="1"
              role="columnheader"
              style="width: 10%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                regionLabel
              </p>
            </div>
          </div>
          <div
            class="body"
          >
            <div
              class="row card"
              role="row"
            >
              <div
                class="cell"
                role="cell"
                style="width: 5%;"
              >
                <label
                  class="bp3-control bp3-radio"
                >
                  <input
                    checked=""
                    type="radio"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                </label>
              </div>
              <div
                class="cell"
                role="cell"
                style="width: 70%;"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-black"
                  style="--text-line-clamp: 1;"
                >
                  undefined mockAsg
                </p>
              </div>
              <div
                class="cell"
                role="cell"
                style="width: 10%;"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-black"
                  style="--text-line-clamp: 3;"
                >
                  0
                </p>
              </div>
              <div
                class="cell"
                role="cell"
                style="width: 10%;"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-black"
                  style="--text-line-clamp: 3;"
                >
                  us-east-1
                </p>
              </div>
            </div>
          </div>
          <div
            class="Layout--horizontal StyledProps--main StyledProps--padding-top-medium StyledProps--padding-bottom-medium StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-distribution-space-between"
          >
            <span
              class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--font-variation-small-semi"
            >
              1
               of 
              1
            </span>
            <div
              class="Layout--horizontal StyledProps--main"
            >
              <button
                class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Pagination--roundedButton Pagination--buttonLeft Button--with-current-color Button--withLeftIcon Button--size Button--small"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-arrow-left StyledProps--main StyledProps--padding-right-xsmall"
                  icon="arrow-left"
                >
                  <svg
                    data-icon="arrow-left"
                    height="12"
                    viewBox="0 0 16 16"
                    width="12"
                  >
                    <desc>
                      arrow-left
                    </desc>
                    <path
                      d="M13.99 6.99H4.41L7.7 3.7a1.003 1.003 0 00-1.42-1.42l-5 5a1.014 1.014 0 000 1.42l5 5a1.003 1.003 0 001.42-1.42L4.41 8.99H14c.55 0 1-.45 1-1s-.46-1-1.01-1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="bp3-button-text"
                >
                  Prev
                </span>
              </button>
              <button
                class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Pagination--roundedButton Pagination--selected Button--with-current-color"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  1
                </span>
              </button>
              <button
                class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Pagination--roundedButton Pagination--buttonRight Button--with-current-color Button--withRightIcon Button--size Button--small"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  Next
                </span>
                <span
                  class="bp3-icon bp3-icon-arrow-right StyledProps--main"
                  icon="arrow-right"
                >
                  <svg
                    data-icon="arrow-right"
                    height="12"
                    viewBox="0 0 16 16"
                    width="12"
                  >
                    <desc>
                      arrow-right
                    </desc>
                    <path
                      d="M14.7 7.29l-5-5a.965.965 0 00-.71-.3 1.003 1.003 0 00-.71 1.71l3.29 3.29H1.99c-.55 0-1 .45-1 1s.45 1 1 1h9.59l-3.29 3.29a1.003 1.003 0 001.42 1.42l5-5c.18-.18.29-.43.29-.71s-.12-.52-.3-.7z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
            <span>
              Showing 5 per page
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ASG selection modal component should refresh the list 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
    >
      <div
        class="StyledProps--font StyledProps--main"
        style="padding-bottom: 20px; border-bottom: 1px solid #CDD3DD;"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-large"
        >
          Select Auto scaling group
        </p>
      </div>
      <div
        class="Layout--horizontal StyledProps--main"
        style="padding-bottom: 20px; padding-top: 20px; border-bottom: 1px solid #CDD3DD; justify-content: space-between;"
      >
        <div
          class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center"
        >
          <button
            class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly"
            disabled=""
            style="background-color: inherit; margin-right: 20px;"
            tabindex="-1"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              Add selected
            </span>
          </button>
          <div>
            <span
              class="bp3-icon bp3-icon-refresh StyledProps--main StyledProps--color StyledProps--color-primary7"
              icon="refresh"
            >
              <svg
                data-icon="refresh"
                height="14"
                viewBox="0 0 16 16"
                width="14"
              >
                <desc>
                  refresh
                </desc>
                <path
                  d="M14.99 6.99c-.55 0-1 .45-1 1 0 3.31-2.69 6-6 6-1.77 0-3.36-.78-4.46-2h1.46c.55 0 1-.45 1-1s-.45-1-1-1h-4c-.55 0-1 .45-1 1v4c0 .55.45 1 1 1s1-.45 1-1v-1.74a7.95 7.95 0 006 2.74c4.42 0 8-3.58 8-8 0-.55-.45-1-1-1zm0-7c-.55 0-1 .45-1 1v1.74a7.95 7.95 0 00-6-2.74c-4.42 0-8 3.58-8 8 0 .55.45 1 1 1s1-.45 1-1c0-3.31 2.69-6 6-6 1.77 0 3.36.78 4.46 2h-1.46c-.55 0-1 .45-1 1s.45 1 1 1h4c.55 0 1-.45 1-1v-4c0-.55-.45-1-1-1z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              style="margin: 0px 5px; cursor: pointer;"
            >
              Refresh
            </span>
          </div>
        </div>
        <div
          class="bp3-input-group ui-search-box ExpandingSearchInput--main    ExpandingSearchInput--light"
          data-name=""
        >
          <span
            class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey700"
            data-icon="thinner-search"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 16 16"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </span>
          <input
            class="bp3-input  ExpandingSearchInput--filter"
            dir="auto"
            placeholder="Search"
            style="padding-right: 0px;"
            type="search"
            value=""
          />
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="table"
        >
          <div
            class="header"
            role="row"
          >
            <div
              class="cell"
              colspan="1"
              role="columnheader"
              style="width: 5%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                
              </p>
            </div>
            <div
              class="cell"
              colspan="1"
              role="columnheader"
              style="width: 70%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                ce.co.instanceSelector.name
              </p>
            </div>
            <div
              class="cell"
              colspan="1"
              role="columnheader"
              style="width: 10%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                Instances
              </p>
            </div>
            <div
              class="cell"
              colspan="1"
              role="columnheader"
              style="width: 10%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                regionLabel
              </p>
            </div>
          </div>
          <div
            class="body"
          >
            <div
              class="row card"
              role="row"
            >
              <div
                class="cell"
                role="cell"
                style="width: 5%;"
              >
                <label
                  class="bp3-control bp3-radio"
                >
                  <input
                    checked=""
                    type="radio"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                </label>
              </div>
              <div
                class="cell"
                role="cell"
                style="width: 70%;"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-black"
                  style="--text-line-clamp: 1;"
                >
                  undefined mockAsg
                </p>
              </div>
              <div
                class="cell"
                role="cell"
                style="width: 10%;"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-black"
                  style="--text-line-clamp: 3;"
                >
                  0
                </p>
              </div>
              <div
                class="cell"
                role="cell"
                style="width: 10%;"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-black"
                  style="--text-line-clamp: 3;"
                >
                  us-east-1
                </p>
              </div>
            </div>
          </div>
          <div
            class="Layout--horizontal StyledProps--main StyledProps--padding-top-medium StyledProps--padding-bottom-medium StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-distribution-space-between"
          >
            <span
              class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--font-variation-small-semi"
            >
              1
               of 
              1
            </span>
            <div
              class="Layout--horizontal StyledProps--main"
            >
              <button
                class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Pagination--roundedButton Pagination--buttonLeft Button--with-current-color Button--withLeftIcon Button--size Button--small"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-arrow-left StyledProps--main StyledProps--padding-right-xsmall"
                  icon="arrow-left"
                >
                  <svg
                    data-icon="arrow-left"
                    height="12"
                    viewBox="0 0 16 16"
                    width="12"
                  >
                    <desc>
                      arrow-left
                    </desc>
                    <path
                      d="M13.99 6.99H4.41L7.7 3.7a1.003 1.003 0 00-1.42-1.42l-5 5a1.014 1.014 0 000 1.42l5 5a1.003 1.003 0 001.42-1.42L4.41 8.99H14c.55 0 1-.45 1-1s-.46-1-1.01-1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="bp3-button-text"
                >
                  Prev
                </span>
              </button>
              <button
                class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Pagination--roundedButton Pagination--selected Button--with-current-color"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  1
                </span>
              </button>
              <button
                class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Pagination--roundedButton Pagination--buttonRight Button--with-current-color Button--withRightIcon Button--size Button--small"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  Next
                </span>
                <span
                  class="bp3-icon bp3-icon-arrow-right StyledProps--main"
                  icon="arrow-right"
                >
                  <svg
                    data-icon="arrow-right"
                    height="12"
                    viewBox="0 0 16 16"
                    width="12"
                  >
                    <desc>
                      arrow-right
                    </desc>
                    <path
                      d="M14.7 7.29l-5-5a.965.965 0 00-.71-.3 1.003 1.003 0 00-.71 1.71l3.29 3.29H1.99c-.55 0-1 .45-1 1s.45 1 1 1h9.59l-3.29 3.29a1.003 1.003 0 001.42 1.42l5-5c.18-.18.29-.43.29-.71s-.12-.52-.3-.7z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
            <span>
              Showing 5 per page
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ASG selection modal component should render successfully 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
    >
      <div
        class="StyledProps--font StyledProps--main"
        style="padding-bottom: 20px; border-bottom: 1px solid #CDD3DD;"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-large"
        >
          Select Auto scaling group
        </p>
      </div>
      <div
        class="Layout--horizontal StyledProps--main"
        style="padding-bottom: 20px; padding-top: 20px; border-bottom: 1px solid #CDD3DD; justify-content: space-between;"
      >
        <div
          class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center"
        >
          <button
            class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly"
            disabled=""
            style="background-color: inherit; margin-right: 20px;"
            tabindex="-1"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              Add selected
            </span>
          </button>
          <div>
            <span
              class="bp3-icon bp3-icon-refresh StyledProps--main StyledProps--color StyledProps--color-primary7"
              icon="refresh"
            >
              <svg
                data-icon="refresh"
                height="14"
                viewBox="0 0 16 16"
                width="14"
              >
                <desc>
                  refresh
                </desc>
                <path
                  d="M14.99 6.99c-.55 0-1 .45-1 1 0 3.31-2.69 6-6 6-1.77 0-3.36-.78-4.46-2h1.46c.55 0 1-.45 1-1s-.45-1-1-1h-4c-.55 0-1 .45-1 1v4c0 .55.45 1 1 1s1-.45 1-1v-1.74a7.95 7.95 0 006 2.74c4.42 0 8-3.58 8-8 0-.55-.45-1-1-1zm0-7c-.55 0-1 .45-1 1v1.74a7.95 7.95 0 00-6-2.74c-4.42 0-8 3.58-8 8 0 .55.45 1 1 1s1-.45 1-1c0-3.31 2.69-6 6-6 1.77 0 3.36.78 4.46 2h-1.46c-.55 0-1 .45-1 1s.45 1 1 1h4c.55 0 1-.45 1-1v-4c0-.55-.45-1-1-1z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              style="margin: 0px 5px; cursor: pointer;"
            >
              Refresh
            </span>
          </div>
        </div>
        <div
          class="bp3-input-group ui-search-box ExpandingSearchInput--main    ExpandingSearchInput--light"
          data-name=""
        >
          <span
            class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey700"
            data-icon="thinner-search"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 16 16"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </span>
          <input
            class="bp3-input  ExpandingSearchInput--filter"
            dir="auto"
            placeholder="Search"
            style="padding-right: 0px;"
            type="search"
            value=""
          />
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="table"
        >
          <div
            class="header"
            role="row"
          >
            <div
              class="cell"
              colspan="1"
              role="columnheader"
              style="width: 5%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                
              </p>
            </div>
            <div
              class="cell"
              colspan="1"
              role="columnheader"
              style="width: 70%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                ce.co.instanceSelector.name
              </p>
            </div>
            <div
              class="cell"
              colspan="1"
              role="columnheader"
              style="width: 10%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                Instances
              </p>
            </div>
            <div
              class="cell"
              colspan="1"
              role="columnheader"
              style="width: 10%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                regionLabel
              </p>
            </div>
          </div>
          <div
            class="body"
          >
            <div
              class="row card"
              role="row"
            >
              <div
                class="cell"
                role="cell"
                style="width: 5%;"
              >
                <label
                  class="bp3-control bp3-radio"
                >
                  <input
                    checked=""
                    type="radio"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                </label>
              </div>
              <div
                class="cell"
                role="cell"
                style="width: 70%;"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-black"
                  style="--text-line-clamp: 1;"
                >
                  undefined mockAsg
                </p>
              </div>
              <div
                class="cell"
                role="cell"
                style="width: 10%;"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-black"
                  style="--text-line-clamp: 3;"
                >
                  0
                </p>
              </div>
              <div
                class="cell"
                role="cell"
                style="width: 10%;"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-black"
                  style="--text-line-clamp: 3;"
                >
                  us-east-1
                </p>
              </div>
            </div>
          </div>
          <div
            class="Layout--horizontal StyledProps--main StyledProps--padding-top-medium StyledProps--padding-bottom-medium StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-distribution-space-between"
          >
            <span
              class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--font-variation-small-semi"
            >
              1
               of 
              1
            </span>
            <div
              class="Layout--horizontal StyledProps--main"
            >
              <button
                class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Pagination--roundedButton Pagination--buttonLeft Button--with-current-color Button--withLeftIcon Button--size Button--small"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-arrow-left StyledProps--main StyledProps--padding-right-xsmall"
                  icon="arrow-left"
                >
                  <svg
                    data-icon="arrow-left"
                    height="12"
                    viewBox="0 0 16 16"
                    width="12"
                  >
                    <desc>
                      arrow-left
                    </desc>
                    <path
                      d="M13.99 6.99H4.41L7.7 3.7a1.003 1.003 0 00-1.42-1.42l-5 5a1.014 1.014 0 000 1.42l5 5a1.003 1.003 0 001.42-1.42L4.41 8.99H14c.55 0 1-.45 1-1s-.46-1-1.01-1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="bp3-button-text"
                >
                  Prev
                </span>
              </button>
              <button
                class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Pagination--roundedButton Pagination--selected Button--with-current-color"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  1
                </span>
              </button>
              <button
                class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Pagination--roundedButton Pagination--buttonRight Button--with-current-color Button--withRightIcon Button--size Button--small"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  Next
                </span>
                <span
                  class="bp3-icon bp3-icon-arrow-right StyledProps--main"
                  icon="arrow-right"
                >
                  <svg
                    data-icon="arrow-right"
                    height="12"
                    viewBox="0 0 16 16"
                    width="12"
                  >
                    <desc>
                      arrow-right
                    </desc>
                    <path
                      d="M14.7 7.29l-5-5a.965.965 0 00-.71-.3 1.003 1.003 0 00-.71 1.71l3.29 3.29H1.99c-.55 0-1 .45-1 1s.45 1 1 1h9.59l-3.29 3.29a1.003 1.003 0 001.42 1.42l5-5c.18-.18.29-.43.29-.71s-.12-.52-.3-.7z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
            <span>
              Showing 5 per page
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
